crates/tui/snapshots/shared/models/picker/model_controls_100_Chinese.snap
---
source: crates/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra  [加速 关]  [长上下文 关]                                                             " Hidden by multi-width symbols: [(17, " "), (19, " "), (22, " "), (28, " "), (30, " "), (32, " "), (34, " "), (37, " ")]
"  GPT-4o                                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
