crates/tui/snapshots/shared/models/picker/model_controls_100_English.snap
---
source: crates/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Search models                                                                                    │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> GPT-6 Astra  [Fast off]  [Long context off]                                                       "
"  GPT-4o                                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
