crates/tui/snapshots/shared/models/picker/other_provider_model_controls_chinese.snap
---
source: crates/tui/src/models/picker_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ 搜索模型                                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"> Claude Opus 5.5   [加速 关]  [长上下文 开]                                                        " Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " "), (33, " "), (35, " "), (37, " "), (39, " "), (42, " ")]
"  Gemini 3.8 Flash  [加速]     [长上下文 开]                                                        " Hidden by multi-width symbols: [(22, " "), (24, " "), (33, " "), (35, " "), (37, " "), (39, " "), (42, " ")]
"  Grok 4.7          [加速 关]                                                                       " Hidden by multi-width symbols: [(22, " "), (24, " "), (27, " ")]
"  Kimi K3                      [长上下文 关]                                                        " Hidden by multi-width symbols: [(33, " "), (35, " "), (37, " "), (39, " "), (42, " ")]
"  DeepSeek V4 Pro              [长上下文 开]                                                        " Hidden by multi-width symbols: [(33, " "), (35, " "), (37, " "), (39, " "), (42, " ")]
"  GLM-5.3                      [长上下文 开]                                                        " Hidden by multi-width symbols: [(33, " "), (35, " "), (37, " "), (39, " "), (42, " ")]
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
